# django-htmx-alpine

./: .env  .envrc  .eslintrc.js  .gitignore  Dockerfile  LICENSE  README.md  delete-local-config  docker-compose.dev.django-standalone.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.localhost.yml  docker-compose.test.yml  docker-compose.yml  generate-local-environment  generate-local-environment--template  generate-nginx-config  gunicorn-start  gunicorn-start.sh  jest-test  manage.py  migrate-all  package-lock.json  package.json  podman-systemd-service-file-generate  project_folder  pyproject.toml  requirements.txt  runserver  runserver-insecure  runserver.sh  shell
app/: .gitignore  cypress.json  gunicorn-start.sh  manage.py  migrate-all.sh  package-lock.json  package.json  requirements.txt  runserver.sh  shell.sh
cypress/: cypress-test
django_htmx/: asgi.py  keys.py.default  settings.py  urls.py  views.py  wsgi.py
django_htmx_alpine/: asgi.py  context_processors.py  helpers.py  keys.default.py  local_config.default.py  server_config.default.py  settings.py  urls.py  utility_views.py  views.py
docker/: entrypoint.sh  generate-keys  generate-keys--template  init.sh  start.sh
jest/: jest-test  navbar-main.unit.test.js  navbar_main.test.js  navbar_main.unit.test.js  status-message.unit.test.js  sum.js  sum.test.js  tasks.unit.test.js
scripts/: migrate-all.sh  postactivate  predeactivate  runserver-insecure.sh  runserver.sh
tasks/: apps.py  models.py  urls.py  views.py
templates/: about.html  base.html  base_form.html  footer.html  (+17 more)
(+100 files in other folders)
